update chat, socket
